web search stuff

--- a/docs/features/web-search/agentic-search.mdx
+++ b/docs/features/web-search/agentic-search.mdx
@@ -60,3 +60,8 @@ Because the model can call `web_search` multiple times, it can perform "Deep Res
 7.  **Finalize**: Answer the user with grounded, verified information.
 
 This iterative loop of **Thought → Action → Thought** continues until the model has sufficient information to answer your request with maximum accuracy.
+
+## Next Steps
+
+- **Save your findings**: Learn how to [save web search results directly to your Knowledge Base](./save-to-knowledge).
+- **Troubleshoot**: If you encounter issues, check the [Web Search Troubleshooting Guide](../../troubleshooting/web-search).
