--- a/docs/features/index.mdx
+++ b/docs/features/index.mdx
@@ -232,7 +232,7 @@ import { TopBanners } from "@site/src/components/TopBanners";
   - Please note that the `{{USER_LOCATION}}` prompt variable requires a secure connection over HTTPS. To utilize this particular prompt variable, please ensure that `{{USER_LOCATION}}` is toggled on from the `Settings` > `Interface` menu.
   - Please note that the `{{CLIPBOARD}}` prompt variables requires access to your device's clipboard.
 
-- 🧠 **Memory Feature & Tools (Experimental)**: Manage information you want your LLMs to remember via `Settings` > `Personalization` > `Memory`. Capable models can now use `memory_add` and `memory_query` tools to dynamically store and retrieve facts about you during chat sessions. [Learn more about Memory](/features/memory).
+- 🧠 **Memory Feature & Tools (Experimental)**: Manage information you want your LLMs to remember via `Settings` > `Personalization` > `Memory`. Capable models can now use `add_memory`, `search_memories`, and `replace_memory_content` tools to dynamically store, retrieve, and update facts about you during chat sessions. [Learn more about Memory](/features/memory).
 
 ---
 
