--- a/docs/features/plugin/tools/index.mdx
+++ b/docs/features/plugin/tools/index.mdx
@@ -141,8 +141,9 @@ Native Mode can be enabled at two levels:
 | `generate_image` | Generates a new image based on a prompt (supports `steps`). | `ENABLE_IMAGE_GENERATION` enabled. |
 | `edit_image` | Edits an existing image based on a prompt and URL. | `ENABLE_IMAGE_EDIT` enabled.|
 | **Memory** | | |
-| `memory_query` | Searches the user's personal memory/personalization bank. | Memory feature enabled. |
-| `memory_add` | Stores a new fact in the user's personalization memory. | Memory feature enabled. |
+| `search_memories` | Searches the user's personal memory/personalization bank. | Memory feature enabled. |
+| `add_memory` | Stores a new fact in the user's personalization memory. | Memory feature enabled. |
+| `replace_memory_content` | Updates an existing memory record by its unique ID. | Memory feature enabled. |
 | **Notes** | | |
 | `search_notes` | Search the user's notes by title and content. | `ENABLE_NOTES` enabled. |
 | `view_note` | Get the full markdown content of a specific note. | `ENABLE_NOTES` enabled. |
