--- a/docs/getting-started/env-configuration.mdx
+++ b/docs/getting-started/env-configuration.mdx
@@ -5036,6 +5036,16 @@ For API Key creation (and the API keys themselves) to work, you need **both**:
 - Default: `True`
 - Description: Enables or disables public sharing of notes.
 
+### Settings Permissions
+
+#### `USER_PERMISSIONS_SETTINGS_INTERFACE`
+
+- Type: `bool`
+- Default: `True`
+- Description: Enables or disables user / group permissions for the interface settings section in the Settings Modal.
+- Persistence: This environment variable is a `PersistentConfig` variable.
+
+
 ## Misc Environment Variables
 
 These variables are not specific to Open WebUI but can still be valuable in certain contexts.
