--- a/docs/troubleshooting/index.mdx
+++ b/docs/troubleshooting/index.mdx
@@ -11,6 +11,7 @@ import { TopBanners } from "@site/src/components/TopBanners";
 Encountering issues? Don't worry, we're here to help! 😊 Start with this important step:
 
 - 🔄 Make sure you're using the **latest version** of the software.
+- 💾 **Check for Configuration Persistence:** Open WebUI prioritizes settings stored in its internal database over environment variables for certain settings (marked as `PersistentConfig`). If your environment changes (like `ENABLE_SIGNUP=True`) seem to be ignored, see the **[Environment Variable Configuration](/getting-started/env-configuration#important-note-on-persistentconfig-environment-variables)** page for how to force updates or manually edit the database.
 
 With this project constantly evolving, updates and fixes are regularly added. Keeping your software up-to-date is crucial to take advantage of all the enhancements and fixes, ensuring the best possible experience. 🚀
 
