--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -130,19 +130,7 @@ docker run -d -p 3000:8080 -e HF_ENDPOINT=https://hf-mirror.com/ --add-host=host
 
 ### Q: Why are my reasoning model's thinking blocks showing as raw text instead of being hidden?
 
-**A:** If you're using a reasoning/thinking model (like **DeepSeek-R1**, **Qwen3**, or similar) and the `<think>...</think>` content is displaying as raw text instead of being properly parsed and hidden, you need to configure Ollama with the correct **reasoning parser**.
-
-Start Ollama with the `--reasoning-parser` flag:
-
-```bash
-ollama serve --reasoning-parser deepseek_r1
-```
-
-This enables proper parsing of thinking blocks so they display in a collapsible section rather than as raw text in the response. The `deepseek_r1` parser works for most reasoning models.
-
-**Note:** This issue is most common with **non-streaming** requests (`stream: false`). Streaming mode typically handles reasoning blocks better by default.
-
-For detailed troubleshooting steps, see our [Reasoning Models Troubleshooting Guide](/troubleshooting/reasoning-models).
+**A:** This happens if the model's thinking tags are not recognized by Open WebUI. You can customize the tags in the model's Advanced Parameters. For more details, see the **[Reasoning & Thinking Models](./features/chat-features/reasoning-models.mdx)** guide and our **[Reasoning Models Troubleshooting Guide](/troubleshooting/reasoning-models)**.
 
 ### Q: RAG with Open WebUI is very bad or not working at all. Why?
 
