--- a/docs/features/memory.mdx
+++ b/docs/features/memory.mdx
@@ -42,13 +42,27 @@ Autonomous memory management works best with frontier models (GPT-5, Claude 4.5+
 
 ## Enabling Memory Tools
 
-1.  **Global Toggle**: Ensure Memory is enabled in your user profile settings.
+1.  **Administrative Enablement**: Ensure the Memory feature is [enabled globally](#administrative-controls) by an administrator and that you have the required permissions.
 2.  **Native Mode (Agentic Mode)**: Enable **Native Function Calling** in the model's advanced parameters (**Admin Panel > Settings > Models > Model Specific Settings > Advanced Parameters**).
 3.  **Quality Models Required**: To unlock these features effectively, use frontier models with strong reasoning capabilities (e.g., GPT-5, Claude 4.5 Sonnet, Gemini 3 Flash, MiniMax M2.1) for the best experience. Small local models may not effectively manage memories autonomously.
 
 :::info Central Tool Documentation
 For complete details on all built-in agentic tools (including memory, web search, and knowledge bases) and how to configure them, see the [**Native/Agentic Mode Tools Guide**](/features/plugin/tools#built-in-system-tools-nativeagentic-mode).
 :::
+
+## Administrative Controls
+
+Administrators have full control over the Memory feature, including the ability to disable it globally or restrict it to specific user groups.
+
+### Global Toggle
+The Memory feature can be toggled on or off for the entire instance. When disabled, the "Personalization" tab is hidden from all users, and the memory-related API endpoints are blocked.
+- **Admin UI**: Admin Panel > Settings > General > Features > **Memories**
+- **Environment Variable**: [`ENABLE_MEMORIES`](/getting-started/env-configuration#enable_memories) (Default: `True`)
+
+### Granular Permissions
+Administrators can also control Memory access on a per-role or per-group basis from the Permissions interface.
+- **Admin UI**: Admin Panel > Users > Permissions > Features > **Memories**
+- **Environment Variable**: [`USER_PERMISSIONS_FEATURES_MEMORIES`](/getting-started/env-configuration#user_permissions_features_memories) (Default: `True`)
 
 ## Privacy & Security
 
