--- a/docs/features/plugin/tools/index.mdx
+++ b/docs/features/plugin/tools/index.mdx
@@ -84,7 +84,7 @@ You can also let your LLM auto-select the right Tools using the [**AutoTool Filt
 
 ---
 
-## Tool Calling Modes: Default vs. Native (Agentic Mode)
+## Tool Calling Modes: Default vs. Native (Agentic Mode) {#tool-calling-modes-default-vs-native}
 
 Open WebUI offers two distinct ways for models to interact with tools. Choosing the right mode depends on your model's capabilities and your performance requirements.
 
@@ -144,7 +144,7 @@ These models excel at multi-step reasoning, proper JSON formatting, and autonomo
 | **Logic** | Prompt-based (Open WebUI) | Model-native (API/Ollama) |
 | **Complex Chaining** | ⚠️ Limited | ✅ Excellent |
 
-### Built-in System Tools (Native/Agentic Mode)
+### Built-in System Tools (Native/Agentic Mode) {#built-in-system-tools-native-mode}
 
 🛠️ When **Native Mode (Agentic Mode)** is enabled, Open WebUI automatically injects powerful system tools based on the features toggled for the chat. This unlocks truly agentic behaviors where capable models (like GPT-5, Claude 4.5 Sonnet, Gemini 3 Flash, or MiniMax M2.1) can perform multi-step research, explore knowledge bases, or manage user memory autonomously.
 
